--- a/aspnetcorelinuxdemo/Dockerfile.original
+++ b/aspnetcorelinuxdemo/Dockerfile.original
@@ -14,7 +14,7 @@ WORKDIR "/src/aspnetcorelinuxdemo"
 RUN dotnet build "aspnetcorelinuxdemo.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "aspnetcorelinuxdemo.csproj" -c Release -o /app/publish
+RUN dotnet publish "aspnetcorelinuxdemo.csproj" -c Release -o /app/publishB
 
 FROM base AS final
 WORKDIR /app
