--- a/aspnetcorelinuxdemo/Dockerfile
+++ b/aspnetcorelinuxdemo/Dockerfile
@@ -8,7 +8,7 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY ["/aspnetcorelinuxdemo.csproj", "aspnetcorelinuxdemo/"]
-RUN dotnet restore "/aspnetcorelinuxdemo.csproj"
+RUN dotnet restore "aspnetcorelinuxdemo.csproj"
 COPY . .
 WORKDIR "/src/"
 RUN dotnet build "aspnetcorelinuxdemo.csproj" -c Release -o /app/build
